--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "dayjs": "^1.8.21",
-    "discord.js": "^12.0.1"
+    "discord.js": "^12.0.1",
+    "node-cron": "^2.0.3"
   },
   "devDependencies": {},
   "scripts": {
