--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ac-lucky-beast",
-  "version": "0.0.0",
+  "name": "tom-nook-discord",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "dependencies": {
@@ -15,5 +15,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "AGPL-3.0-or-later"
 }
