--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "limiter": "^1.1.5",
     "node-cron": "^2.0.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "standard": "^14.3.3"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "standard"
   },
   "author": "",
   "license": "AGPL-3.0-or-later"
