--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dayjs": "^1.8.21",
     "discord.js": "^12.2.0",
     "limiter": "^1.1.5",
-    "node-cron": "^2.0.3"
+    "node-cron": "^2.0.3",
+    "yargs-parser": "^18.1.3"
   },
   "devDependencies": {
     "standard": "^14.3.3"
